# valve_tracker_triton

./: .gitignore  CMakeLists.txt  README  mainpage.dox  manifest.xml  package.xml
etc/: model.yaml  trained_model.yml  tuning_parameters.yaml
include/: utils.h  valve_tracker.h
include/valve_tracker/: stereo_processor.h  tracker.h  trainer.h  utils.h  valve_tracker.h  valve_trainer.h
include/valve_tracker_triton/: valve_tracker.h
launch/: autotuning.launch  tracker.launch  train.launch  trainer.launch  valve_tracker_triton.launch
src/: camera2camera.cpp  node_autotuning.cpp  node_tracker.cpp  node_trainer.cpp  stereo_processor.h  tracker.cpp  trainer.cpp  valve_tracker.cpp  valve_tracker.h  valve_tracker_node.cpp  valve_trainer.cpp  valve_trainer_node.cpp
